--- a/CódigoFuente/BitacorasProduccion/Views/BudgetControlling/ImportActual.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BudgetControlling/ImportActual.cshtml
@@ -95,9 +95,9 @@
                                 <div class="card-box">
                                     <div class="form-group">
                                         @*<a href="@Url.Action("Create", ViewBag.ControllerName)" class="btn btn-success">
-                                                <i class="fa fa-plus-square"></i>
-                                                Crear nuevo
-                                            </a>*@
+                <i class="fa fa-plus-square"></i>
+                Crear nuevo
+            </a>*@
                                     </div>
 
 
@@ -105,12 +105,12 @@
                                         <!--Planta-->
                                         <label class="control-label col-md-1 text_derecha">Plant</label>
                                         <div class="col-md-2">
-                                            <input type="text" class="form-control" value="@Model.Area.plantas.descripcion" readonly>
+                                            <input type="text" class="form-control" value="@Model.budget_departamentos.budget_plantas.descripcion" readonly>
                                         </div>
                                         <!--Deparment-->
                                         <label class="control-label col-md-1 text_derecha">Department</label>
                                         <div class="col-md-4">
-                                            <input type="text" class="form-control" value="@Model.Area.descripcion" readonly>
+                                            <input type="text" class="form-control" value="@Model.budget_departamentos.descripcion" readonly>
                                         </div>
                                         <!--Cost center-->
                                         <label class="control-label col-md-1 text_derecha">Cost Center</label>
@@ -118,12 +118,14 @@
                                             <input type="text" class="form-control" value="@Model.num_centro_costo" readonly>
                                         </div>
                                     </div>
-
+                                    @{
+                                        String responsables = (string.Join("/", Model.budget_responsables.Select(x => x.empleados.ConcatNombre).ToArray()));
+                                    }
                                     <div class="form-group row">
                                         <!--responsable-->
                                         <label class="control-label col-md-1 text_derecha">Responsable</label>
                                         <div class="col-md-4">
-                                            <input type="text" class="form-control" value="@Model.empleados.ConcatNombre" readonly>
+                                            <input type="text" class="form-control" value="@responsables" readonly>
                                         </div>
                                     </div>
                                     <div class="ln_solid"></div>
@@ -160,7 +162,7 @@
                                                 </div>
                                                 @Html.ValidationMessageFor(m => m.PostedFile, "", new { @class = "text-danger" })
                                             </div>
-                                          
+
                                             <div class="col-md-2">
                                                 <div>
                                                     <input type="submit" value="Load File" class="btn btn-success float-right" />
