--- a/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/Centros.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/Centros.cshtml
@@ -62,7 +62,7 @@
                                             Crear nuevo
                                         </a>*@
                                     </div>
-                                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                                    <table id="datatable1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
                                         <thead>
                                             <tr>
                                                 <th>
@@ -75,10 +75,10 @@
                                                     Plant
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.id_area)
+                                                    @Html.DisplayNameFor(model => model.id_budget_departamento)
                                                 </th>
                                                 <th>
-                                                    @Html.DisplayNameFor(model => model.id_responsable)
+                                                    Responsable
                                                 </th>
                                                 <th>Acciones</th>
                                             </tr>
@@ -95,13 +95,16 @@
                                                     @Html.DisplayFor(modelItem => item.num_centro_costo)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.Area.plantas.descripcion)
+                                                    @Html.DisplayFor(modelItem => item.budget_departamentos.budget_plantas.descripcion)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.Area.descripcion)
+                                                    @Html.DisplayFor(modelItem => item.budget_departamentos.descripcion)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.empleados.ConcatNombre)
+                                                    @{
+                                                        String responsables = (string.Join("/", item.budget_responsables.Select(x => x.empleados.ConcatNombre).ToArray()));
+                                                    }
+                                                    <span>@responsables</span>
                                                 </td>
                                                 <td>
                                                     @{ DateTime fechaActual = DateTime.Now;}
@@ -140,9 +143,21 @@
     @Scripts.Render("~/bundles/dataTables_js")
 
     <script>
+
+        //inicializa los data table
+        var tabla = $('#datatable1').DataTable({
+            "paging": true,
+            "ordering": true,
+            "searching": true,
+            "scrollX": true,
+            "pageLength": 20,
+            "lengthMenu": [5,10, 20, 50],
+            "info": true,
+           
+        });
+
         //agranda el tamaño de la barra
         window.onload = function () {
-            document.getElementById('menu_toggle').click();
             document.getElementById('menu_toggle').click();
         }
     </script>
