--- a/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/DetailsCentro.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/DetailsCentro.cshtml
@@ -729,7 +729,7 @@
                                         </div>
                                     </div>
 
-                                    <a onclick="javascript: volverAtras()" class="btn btn-round btn-info btm-sm" style="color:white" title="Volver">
+                                    <a href="@Url.Action("Centros", ViewBag.ControllerName)" class="btn btn-round btn-info btm-sm" style="color:white" title="Volver">
                                         <i class="fa fa-arrow-circle-left"></i> Volver al listado
                                     </a>
 
