--- a/CódigoFuente/BitacorasProduccion/Views/BudgetControlling/Reportes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BudgetControlling/Reportes.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Portal_2_0.Models.budget_centro_costo>
+﻿@model IEnumerable<Portal_2_0.Models.view_valores_fiscal_year>
+@using Bitacoras.Util
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Concentrado de información";
@@ -10,6 +11,7 @@
 
     //obtiene los filtros
     Portal_2_0.Models.Paginacion paginacionFiltros = (Portal_2_0.Models.Paginacion)ViewBag.Paginacion;
+
 
     string planta = string.Empty;
     if (paginacionFiltros.ValoresQueryString["planta"] != null)
@@ -42,6 +44,29 @@
     <!-- Select2 -->
     <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
+    <!--fixed columns css-->
+    <link href="@Url.Content("~/Content/vendors/datatables.net-fixedcolumns/dataTables.fixedColumns.css")" rel="stylesheet">
+    <style>
+        .text_derecha {
+            text-align: right;
+        }
+        /* Ensure that the demo table scrolls */
+        th, td {
+            white-space: nowrap;
+        }
+
+        .fondo_actual {
+            background-color: #808080;
+        }
+
+        .fondo_forecast {
+            background-color: #109d3f;
+        }
+
+        .fondo_budget {
+            background-color: #4d2bcc;
+        }
+    </style>
 }
 
 @*Para SweetAlert*@
@@ -80,7 +105,7 @@
                             <div class="col-sm-12">
                                 <div class="card-box">
                                     <div class="form-group">
-                                        @using (Html.BeginForm(null, null, FormMethod.Get, new { id = "buscarForm", @class = "form-horizontal form-label-left" }))
+                                        @using (Html.BeginForm("ExportarConcentrado", null, FormMethod.Get, new { id = "buscarForm", @class = "form-horizontal form-label-left js-allow-double-submission", @target="_blank" }))
                                         {
 
 
@@ -102,130 +127,18 @@
                                             <div class="form-group row ">
 
                                                 <div class="col-md-12 col-sm-12">
-                                                    <input type="submit" value="Filtrar" class="btn btn-info float-right" />
+                                                    <input type="button" id="button_submit" value="Exportar" class="btn btn-success float-right" />
                                                 </div>
                                             </div>
 
                                         }
                                         <hr />
-                                        @*@if (ViewBag.Create != null && ViewBag.Create)
-                                            {
-                                                <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
-                                                    <i class="fa fa-plus-square"></i>
-                                                    Crear nuevo
-                                                </a>
-                                            }*@
+                                      
 
-                                    </div>
-                                    <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
-                                        <thead>
-                                            <tr>
-
-                                                <th>Acciones</th>
-                                                <th>
-                                                    Item
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.num_centro_costo)
-                                                </th>
-                                                <th>
-                                                    Plant
-                                                </th>
-                                                <th>
-                                                    @Html.DisplayNameFor(model => model.id_budget_departamento)
-                                                </th>
-                                                <th>
-                                                    Responsable
-                                                </th>
-                                                <th>
-                                                    Estado Forecast
-                                                </th>
-                                                <th>
-                                                    Estado Budget
-                                                </th>
-
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-
-                                            @foreach (var item in Model)
-                                            {
-
-                                                String responsables = (string.Join("/", item.budget_responsables.Select(x => x.empleados.ConcatNombre).ToArray()));
-
-                                            <tr>
-                                                <td>
-                                                    <a href="@Url.Action("DetailsCentro", ViewBag.ControllerName, new { id = item.id})" class="btn btn-info btm-sm" title="Detalles">
-                                                        <i class="fa fa-info-circle"></i>
-                                                    </a>
-                                                    <a href="@Url.Action("ImportActual", ViewBag.ControllerName, new
-                                                {
-                                                    id = item.id
-
-                                                })" class="btn btn-success btm-sm" title="Import Actual">
-                                                        <i class="fa fa-cloud-upload"></i> Import
-                                                    </a>
-                                                </td>
-                                                <td>
-                                                    @fila
-                                                </td>
-
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.num_centro_costo)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.budget_departamentos.budget_plantas.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.budget_departamentos.descripcion)
-                                                </td>
-                                                <td>
-                                                    <span>@responsables</span>
-                                                </td>
-                                                <td>
-                                                    @if (item.RelAnioCentroActual_Forecast() == null)
-                                                    {
-                                                        <span>No disponible</span>
-                                                    }
-                                                    else if (item.RelAnioCentroActual_Forecast().estatus)
-                                                    {
-                                                        <span>Abierto</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span>Cerrado</span>
-                                                    }
-                                                </td>
-                                                <td>
-                                                    @if (item.RelAnioCentroProximo_Budget() == null)
-                                                    {
-                                                        <span>No disponible</span>
-                                                    }
-                                                    else if (item.RelAnioCentroProximo_Budget().estatus)
-                                                    {
-                                                        <span>Abierto</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span>Cerrado</span>
-                                                    }
-                                                </td>
-
-
-                                            </tr>
-
-                                                fila++;
-                                            }
-                                        </tbody>
-                                    </table>
+                                    </div>                                    
                                 </div>
                                 <br />
-                                @if (Model.Count() > 0)
-                                {
-                                    <nav id="nav_paginacion" aria-label="...">
-                                        @{Html.RenderPartial("_Paginacion", Model);}
-                                    </nav>
-                                }
+                               
                             </div>
                         </div>
                     </div>
@@ -246,24 +159,36 @@
 
         $(document).ready(function () {
 
-            //inicializa los data table
-            //inicializa los data table
-            var tabla = $('#datatable_1').DataTable({
-                "paging": false,
-                "ordering": true,
-                "searching": false,
-                "scrollX": true,
-                "pageLength": 10,
-                "lengthMenu": [5, 10, 20, 50],
-                "info": true,
-
-            });
+          
             // Initialize Select2 Elements (debe ir después de asignar el valor)
             $('.select2bs4').select2({
                 theme: 'bootstrap4'
             })
 
+            $('#button_submit').on('click', function () {
+
+               
+                //disable the submit button
+                $("#button_submit").attr("disabled", true);
+
+                setTimeout(activaSubmit, 4000);
+
+                $('#buscarForm').submit();
+
+            });
+
+
         });
+
+        function activaSubmit() {
+            //disable the submit button
+            $("#button_submit").attr("disabled", false);
+            
+        }
+
+        function ReiniciaTablas() {
+            clicMenu(2);
+        }
 
         //agranda el tamaño de la barra
         window.onload = function () {
